# valunds_mono

./: .gitignore  LICENSE  README.md  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  split_bankid_cert.ps1
backend/: test_bankid.py
backend/apps/accounts/: admin.py  bankid_views.py  models.py  oauth_views.py  security_utils.py  serializers.py  urls.py  validators.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_user_email_verified_user_verification_token_and_more.py  0003_user_address_user_city_user_country_and_more.py  0004_user_account_locked_until_user_failed_login_attempts_and_more.py  0005_loginhistory_securityevent_user_last_login_ip_and_more.py  0006_user_bankid_personal_number_user_bankid_verified_and_more.py
backend/apps/profiles/: __init__.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/scripts/: check_code.py
backend/templates/accounts/: account_locked.html  new_login_detected.html  password_changed.html  password_reset_notification.html  reset_password_email.html  verify_email.html
frontend/: eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/app/layouts/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/app/pages/: About.tsx  Contact.tsx  Dashboard.tsx  FindTalent.tsx  Home.tsx  (+1 more)
frontend/src/assets/: site.webmanifest
frontend/src/styles/: index.css
infrastructure/docker/: .dockerignore  Dockerfile  docker-compose.yml
infrastructure/nginx/: site.conf
(+26 files in other folders)
